ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_07.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-vi-after-start-of-lent\", \"feria-of-lent\"]"
expression: s.0
---
2025-03-07
Vespers of Feria VI after start of Lent:
Vespers:
  Antiphons:   Ordinary of Quinquagesima (or Psalter)
  Psalms:      Psalter
  Chapter:     Ordinary of Quinquagesima (or Psalter)
  Hymn:        Ordinary of Quinquagesima (or Psalter)
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
