ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_09.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-i-of-lent\", \"dominica-of-lent\"]"
expression: s.0
---
2025-03-09
Second Vespers of Dominica I of Lent:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
