ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_14.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"ember-friday-of-lent\", \"feria-of-lent\"]"
expression: s.0
---
2025-03-14
Vespers of Ember Friday of Lent:
Vespers:
  Antiphons:   Psalter (Ordinary of Lent)
  Psalms:      Psalter
  Chapter:     Psalter (Ordinary of Lent)
  Hymn:        Psalter (Ordinary of Lent)
  Verse:       Psalter (Ordinary of Lent)
  Magnificat:  Psalter (Ordinary of Lent)
  Collect:     of Sunday
